--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Keita Yamada</title>
-    <meta name="description" content="Designer and Developer in Japan">
+    <title>MABA ®</title>
+    <meta name="description" content="Developer | Analyst | Project Leader | Technical Leader in Mexico">
     <link rel="canonical" href="https://p5aholic.me">
     <meta property="og:locale" content="ja_JP">
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Keita Yamada">
-    <meta property="og:title" content="Keita Yamada">
-    <meta property="og:description" content="Designer and Developer in Japan">
+    <meta property="og:site_name" content="MABA ®">
+    <meta property="og:title" content="MABA ®">
+    <meta property="og:description" content="Developer | Analyst | Project Leader | Technical Leader in Mexico">
     <meta property="og:url" content="https://p5aholic.me">
     <meta property="og:image" content="https://p5aholic.me/assets/share-image.png">
     <meta property="og:image:type" content="image/png">
@@ -25,7 +25,9 @@
 </head>
 <body>
 <div id="EnterView">
-    <div class="_t1">Keita Yamada</div>
+    <div class="_t1">֎ M  A  B  A ֎  <br><br><br>
+    </div>
+    <div></div>
     <div class="_t2">Portfolio</div>
 </div>
 <div id="Page">
@@ -59,7 +61,7 @@
         </div>
     </div>
     <header class="siteHeader" id="SiteHeader">
-        <h1 class="siteHeader_title">Keita Yamada</h1>
+        <h1 class="siteHeader_title">֎ M A B A ֎</h1>
         <p class="siteHeader_label">Designer & Developer</p>
         <nav class="siteHeader_nav" x-data>
             <ol>
@@ -91,7 +93,7 @@
         </nav>
     </header>
     <div id="Copyright">
-        <p>&copy;Keita Yamada</p>
+        <p>&copy;MABA ®</p>
     </div>
     <main class="content" id="Content" data-scroll="area">
         <div class="content_inner" data-scroll="target">
