--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="MABA ®">
     <meta property="og:title" content="MABA ®">
-    <meta property="og:description" content="Developer | Analyst | Project Leader | Technical Leader in Mexico">
+    <meta property="og:description" content="Designer and Developer in Japan">
     <meta property="og:url" content="https://p5aholic.me">
     <meta property="og:image" content="https://p5aholic.me/assets/share-image.png">
     <meta property="og:image:type" content="image/png">
@@ -25,9 +25,7 @@
 </head>
 <body>
 <div id="EnterView">
-    <div class="_t1">֎ M  A  B  A ֎  <br><br><br>
-    </div>
-    <div></div>
+    <div class="_t1">֎ M  A  B  A ֎  <br><br><br></div>
     <div class="_t2">Portfolio</div>
 </div>
 <div id="Page">
@@ -61,7 +59,7 @@
         </div>
     </div>
     <header class="siteHeader" id="SiteHeader">
-        <h1 class="siteHeader_title">֎ M A B A ֎</h1>
+        <h1 class="siteHeader_title">MABA ®</h1>
         <p class="siteHeader_label">Designer & Developer</p>
         <nav class="siteHeader_nav" x-data>
             <ol>
